# dual_autodiff

./: .gitignore  README.md  pyproject.toml
demo/: cython_timing.py  diff_demo.py
docs/: make.bat  requirements.txt
docs/source/: conf.py  index.rst  modules.rst
docs/source/tutorials/: getting_started.ipynb
dual_autodiff/: dual.py  version.py
dual_autodiff_x/: pyproject.toml  setup.py
dual_autodiff_x/src/dual_autodiff_x/: __init__.pyx  dual.c  dual.pyx  version.py
report/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  refs.bib
report/sections/: discussion.tex  introduction.tex  methodology.tex  results.tex
test/: test_dual.py
