[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dual_autodiff"
dynamic = ["version"]
authors = [
    {name = "Phong-Anh Nguyen Trinh", email = "pan31@cam.ac.uk"}
]
description = "A dual number automatic differentiation package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.0",
    "matplotlib",
]

[tool.setuptools]
packages = ["dual_autodiff"] 

[tool.setuptools_scm]
write_to = "dual_autodiff/version.py"