[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=3.0.0", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "dual_autodiff_x"
dynamic = ["version"]
description = "Cythonized version of dual_autodiff"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["dual_autodiff_x"]

[tool.cibuildwheel]
build-verbosity = 1
skip = ["pp*", "*-win32", "*-manylinux_i686"]
before-build = "pip install numpy cython"

[tool.wheel]
exclude = ["*.pyx"]